--- a/Projet_Gomycode/requirements.txt
+++ b/Projet_Gomycode/requirements.txt
@@ -1,10 +1,11 @@
-keras-tuner==1.0.3
-matplotlib==3.5.1
-numpy==1.21.5
-pandas==1.4.1
-plotly==5.3.1
-pygwalker==0.0.4
-scikit-learn==1.0.2
-seaborn==0.11.2
-streamlit==1.10.0
-tensorflow==2.8.0
+matplotlib==3.9.0
+numpy==1.26.4
+keras-tuner==1.4.7
+pandas==2.2.2
+plotly==5.22.0
+pygwalker==0.4.8.9
+scikit-learn==1.5.0
+scipy==1.13.1
+seaborn==0.13.2
+streamlit==1.35.0
+tensorflow==2.16.1
